made changes in farmer-add-product service

--- a/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
@@ -6,28 +6,12 @@
   <div class = "card shadow">
     <div class="form-group">
 
-				<!-- <div class = form-comp>
-					<select class="form-control" (change)="selectChangeHandler($event)">
-						<option value="select">{{ 'farmer_add_product.choose_product_name' | translate }}</option>
-								 <option value="Onion">{{ 'farmer_add_product.onion' | translate }}</option>
-								 <option value="Tomato">{{ 'farmer_add_product.tomato' | translate }}</option>
-								 <option value="Brinjal">{{ 'farmer_add_product.brinjal' | translate }}</option>
-								 <option value="Cauliflower">{{ 'farmer_add_product.cauliflower' | translate }}</option>
-								 <option value="Carrot">{{ 'farmer_add_product.carrot' | translate }}</option>
-								 <option value="Garlic">{{ 'farmer_add_product.garlic' | translate }}</option>
-								 <option value="Lady Finger">{{ 'farmer_add_product.lady_finger' | translate }}</option>
-								 <option value="Orange">{{ 'farmer_add_product.orange' | translate }}</option>
-								 <option value="Lemon">{{ 'farmer_add_product.lemon' | translate }}</option>
-					</select>
-				</div> -->
-
-				<div class = form-comp >
-					<select class="form-control" (change)="selectChangeHandler($event)" >
-						<option disabled>{{ 'farmer_add_product.choose_product_name' | translate }}</option>
-						<option value="selected" *ngFor="let item of items">{{item}}</option>
-					</select>
-				</div>
-					
+			<div class = form-comp >
+				<select class="form-control" (change)="selectChangeHandler($event)" >
+					<option disabled>{{ 'farmer_add_product.choose_product_name' | translate }}</option>
+					<option value="{{item}}" *ngFor="let item of items">{{item}}</option>
+				</select>
+			</div>
 
 		<div class = form-comp>
 			<div class = "name"><label for="description">{{ 'farmer_add_product.product_description' | translate }}</label></div>
