--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
@@ -41,7 +41,7 @@
 			<div class = "form-comp">
 				<div class = "name"><label for="ifscCode">{{ 'farmer_bank_details.ifsc_code' | translate }}</label></div>
 				<input type="text" class="form-control" id="ifscCode" placeholder="Enter IFSC Code{{ 'farmer_bank_details.bank_details' | translate }}" formControlName="ifscCode">
-				<div *ngIf="rForm.controls['ifscCode'].touched && rForm.controls['accountName'].invalid" class="alert">
+				<div *ngIf="rForm.controls['ifscCode'].touched && rForm.controls['ifscCode'].invalid" class="alert">
 					<div *ngIf="rForm.controls['ifscCode'].hasError('required')">
 						{{ 'farmer_bank_details.ifsc_required' | translate }}
 					</div>
