changes in forms ui

--- a/src/app/customer/component/customer-login/customer-login.component.css
+++ b/src/app/customer/component/customer-login/customer-login.component.css
@@ -23,7 +23,7 @@ button{
     margin-bottom: 20px;
 }
 h1 {
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Roboto' sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
@@ -74,4 +74,9 @@ button:focus{
 }
 .form-comp-top{
     margin-top: 40px;
+}
+#bgimg{
+    background-image: url(../../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
