--- a/src/app/customer/component/forget-password/forget-password.component.html
+++ b/src/app/customer/component/forget-password/forget-password.component.html
@@ -1,41 +1,42 @@
 <!-- <app-customer-common-header></app-customer-common-header> -->
 
-<div class="container-fluid mt-100">
-	<div *ngIf="!hideVar">
-		<h1>{{ 'customer_forgot_password.forget_password' | translate }} </h1>
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+
+<div>
+
+	<div *ngIf="!hideVar" style="padding-top: 1.7rem">
+			<h1>{{ 'customer_forgot_password.forget_password' | translate }}</h1>
 		<div class="container-fluid">
-			<div class="card  shadow cardwidth">
+			<div class="card shadow cardwidth">
 				<div class="card-body">
 					<form [formGroup]="numberForm" (ngSubmit)="sendOtp(numberForm.value)">
 						<div class="form-group">
-							<div class="form-comp-top">
-								<div class="name">
-									<label for="exampleInputEmail1">{{ 'customer_forgot_password.mobile_number' | translate }}*</label>
+								<div class = "form-comp-top">
+							<label for="exampleInputEmail1">{{ 'customer_forgot_password.mobile_number' | translate }}*</label>
+							<input class="form-control" type="text" id="mobileNo" formControlName="mobileNo" placeholder="{{ 'farmer_forgot_password.mobile_number' | translate }}">
+							<div *ngIf="numberForm.controls['mobileNo'].touched && numberForm.controls['mobileNo'].invalid" class="alert">
+								<div *ngIf="numberForm.controls['mobileNo'].hasError('minlength')" >
+									{{ 'customer_forgot_password.less_than_10_digits' | translate }}
 								</div>
-								<input class="form-control" type="text" id="mobileNo" formControlName="{{ 'customer_forgot_password.mobile_number' | translate }}">
-								<div *ngIf="numberForm.controls['mobileNo'].touched && numberForm.controls['mobileNo'].invalid" class="alert">
-									<div *ngIf="numberForm.controls['mobileNo'].hasError('minlength')">
-										{{ 'customer_forgot_password.less_than_10_digits' | translate }}
-									</div>
-									<div *ngIf="numberForm.controls['mobileNo'].hasError('maxlength')">
-										{{ 'customer_forgot_password.more_than_10_digits' | translate }}
-									</div>
-									<div *ngIf="numberForm.controls['mobileNo'].hasError('required')">
-										{{ 'customer_forgot_password.mobile_number_is_required' | translate }}
-									</div>
+								<div *ngIf="numberForm.controls['mobileNo'].hasError('maxlength')">
+								{{ 'customer_forgot_password.more_than_10_digits' | translate }}
+								</div>
+								<div *ngIf="numberForm.controls['mobileNo'].hasError('required')">
+									{{ 'customer_forgot_password.mobile_number_is_required' | translate }}
 								</div>
 							</div>
+							</div>
 						</div>
-						<div class="form-comp-button">
-							<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!numberForm.valid">Send OTP{{ 'customer_forgot_password.send_otp' | translate }}</button>
-						</div>
+						<div class = "form-comp-button">
+						<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!numberForm.valid">{{ 'customer_forgot_password.send_otp' | translate }}</button>
+					</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div *ngIf="hideVar2">
+	
+	<div *ngIf="hideVar2" style="padding-top: 1.7rem">
 		<h1> {{ 'customer_forgot_password.verify_otp_to_reset_password' | translate }} </h1>
 		<div class="container-fluid">
 			<div class="card shadow cardwidth">
@@ -62,7 +63,7 @@
 	</div>
 
 
-	<div *ngIf="hideVar3">
+	<div *ngIf="hideVar3" style="padding-top: 1.7rem">
 		<h1>{{ 'customer_forgot_password.reset_password' | translate }}</h1>
 		<div class="container-fluid">
 			<div class="card shadow cardwidth">
@@ -111,4 +112,5 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
