--- a/src/app/farmer/component/forget-password/forget-password.component.html
+++ b/src/app/farmer/component/forget-password/forget-password.component.html
@@ -1,7 +1,8 @@
 <!-- <app-farmer-common-header></app-farmer-common-header> -->
-<div class="mt-100">
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+<div>
 
-<div *ngIf="!hideVar">
+<div *ngIf="!hideVar" style="padding-top: 1.7rem">
 		<h1>{{ 'farmer_forgot_password.forget_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card shadow cardwidth">
@@ -33,7 +34,7 @@
 	</div>
 </div>
 
-<div *ngIf="hideVar2">
+<div *ngIf="hideVar2" style="padding-top: 1.7rem">
 		<h1>{{ 'farmer_forgot_password.verify_otp_to_reset_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card  shadow cardwidth">
@@ -58,7 +59,7 @@
 </div>
 
 
-<div *ngIf="hideVar3">
+<div *ngIf="hideVar3" style="padding-top: 1.7rem">
 		<h1>{{ 'farmer_forgot_password.reset_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card shadow cardwidth">
@@ -101,4 +102,5 @@
 	</div>
 </div>
 
+</div>
 </div>
