--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,7 +1,7 @@
 
 /***** Footer *****/
 
-.footer-top { padding: 30px 0; background: #333; text-align: left; color: #aaa; margin-top: 3rem; }
+.footer-top { padding: 30px 0; background: #333; text-align: left; color: #aaa;}
 .footer-top h3 { color: #fff; }
 
 .footer-about img.logo-footer { max-width: 100px; margin-top: 0; margin-bottom: 18px; }
