--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-100">
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+<div class="container-fluid" style="padding-top: 1.7rem">
 	<h1>{{ 'help.Help' | translate }}</h1>
 	<div class="_1HjH7">
 		<div class="_3qe6h">
@@ -55,5 +56,6 @@
 	<div class="col-sm-2">
 
 	</div>
+</div>
 </div>
 </div>
