--- a/src/app/customer/component/customer-register/customer-register.component.css
+++ b/src/app/customer/component/customer-register/customer-register.component.css
@@ -25,8 +25,8 @@ button:focus{
     border-color : #f9f9f9 !important;
 }
 h1 {
-    font-weight: 400;
-    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-family: 'Roboto' sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
@@ -66,4 +66,9 @@ body {
     margin-top: 10px;
     text-align: center;
     border-radius: 12px;
+}
+#bgimg{
+    background-image: url(../../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
