--- a/src/app/farmer/component/farmer-authentication-authorization/aadhaar/aadhaar.component.css
+++ b/src/app/farmer/component/farmer-authentication-authorization/aadhaar/aadhaar.component.css
@@ -21,8 +21,8 @@
     margin-top: 3rem;
 }
 h1 {
-    font-weight: 400;
-    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-family: 'Roboto' sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
@@ -77,4 +77,9 @@ button:focus{
 
 .form-comp{
     margin-top: 25px;
+}
+#bgimg{
+    background-image: url(../../../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
