--- a/src/app/farmer/component/farmer-authentication-authorization/farmer-register/farmer-register.component.css
+++ b/src/app/farmer/component/farmer-authentication-authorization/farmer-register/farmer-register.component.css
@@ -17,7 +17,7 @@
     animation: 2s alertAnim forwards;
 }
 h1 {
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
@@ -72,4 +72,9 @@ button:focus{
 
 .form-comp{
     margin-top: 25px;
+}
+#bgimg{
+    background-image: url(../../../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
