--- a/src/app/farmer/component/farmer-login/farmer-login.component.html
+++ b/src/app/farmer/component/farmer-login/farmer-login.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-100">
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+<div class="container-fluid" style="padding-top: 1.7rem">
   <h1>{{ 'farmer_login.login_farmer' | translate }}</h1>
   <div class="card shadow cardwidth">
     <div class="card-body">
@@ -42,5 +43,6 @@
    </div>
     </form>
  </div>
+</div>
 </div>
 </div>
