--- a/src/app/farmer/component/forget-password/forget-password.component.css
+++ b/src/app/farmer/component/forget-password/forget-password.component.css
@@ -21,15 +21,13 @@
     margin-top: 3rem;
 }
 h1 {
-    font-weight: normal;
-    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-family: 'Roboto' sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #29a745;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
 
 @keyframes alertAnim {
@@ -77,4 +75,9 @@ button:focus{
 
 .form-comp{
     margin-top: 25px;
+}
+#bgimg{
+    background-image: url(../../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
