--- a/src/app/shared/about-us/about-us.component.css
+++ b/src/app/shared/about-us/about-us.component.css
@@ -1,5 +1,5 @@
 h1 {
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
@@ -36,4 +36,9 @@ blockquote{
 .card-block{
     margin : 15px 15px 15px 15px;
 
+}
+#bgimg{
+    background-image: url(../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
