--- a/src/app/shared/about-us/about-us.component.html
+++ b/src/app/shared/about-us/about-us.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-100">
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+<div class="container-fluid" style="padding-top: 1.7rem">
     <div class="row">
         <div class="col-md-12">
           <h1> {{ 'about_us.about_us_heading' | translate }} </h1>
@@ -125,4 +126,5 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
