--- a/src/app/shared/support/support.component.css
+++ b/src/app/shared/support/support.component.css
@@ -4,7 +4,7 @@ form{
 }
 
 h1 {
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
@@ -90,4 +90,9 @@ button:focus{
     background-color: #f9f9f9;
     width : 70%;
     margin : auto;
+}
+#bgimg{
+    background-image: url(../../../assets/images/backg4.jpg); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
