--- a/src/app/shared/support/support.component.html
+++ b/src/app/shared/support/support.component.html
@@ -1,4 +1,5 @@
-<div class="mt-100">
+<div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
+<div style="padding-top: 1.7rem">
   <h1> {{ 'support.support' | translate }} </h1>
 </div>
 <form [formGroup]="rForm" (ngSubmit)="submitIssue(rForm.value)">
@@ -57,3 +58,4 @@
     </div>
   </div>
 </form>
+</div>
