--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,61 +1,68 @@
 <div id="bgimg" style="margin-top: 5.4rem; padding-bottom: 3rem">
-<div class="container-fluid" style="padding-top: 1.7rem">
-	<h1>{{ 'help.Help' | translate }}</h1>
-	<div class="_1HjH7">
-		<div class="_3qe6h">
-		</div>
-	</div>
-<div class="row">
-	<div class="col-sm-2">
-
-	</div>
-	<div id="card-306010" class="col-sm-8">
-		<div class="card my-2 shadow-sm">
-			<div class="card-header">
-				<a class="card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-114778">{{ 'help.how_to_register' | translate }}</a>
+	<div class="container-fluid" style="padding-top: 1.7rem">
+		<!-- Heading of the page -->
+		<h1>{{ 'help.Help' | translate }}</h1>
+		<div class="row">
+			<!-- Providing offset to keep content in the centre -->
+			<div class="col-sm-2">
 			</div>
-			<div id="card-element-114778" class="collapse p-3">
-				<div class="card-block">
-					{{ 'help.how_to_register_description' | translate }}
+			<!-- Actual content area starts here -->
+			<div id="card-306010" class="col-sm-8">
+				<!-- Embedded help video -->
+				<div style="position:relative;height:0;padding-bottom:56.21%">
+					<iframe src="https://www.youtube.com/embed/ONXfL6evR0Q?ecver=2" style="position:absolute;width:100%;height:100%;left:0"
+					 width="641" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+				<!-- How to register area starts here -->
+				<div class="card my-2 shadow-sm">
+					<div class="card-header">
+						<a class="card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-114778">{{ 'help.how_to_register' | translate }}</a>
+					</div>
+					<div id="card-element-114778" class="collapse p-3">
+						<div class="card-block">
+							{{ 'help.how_to_register_description' | translate }}
+						</div>
+					</div>
+				</div>
+				<!-- Aadhaar verification area starts here -->
+				<div class="card my-2 shadow-sm">
+					<div class="card-header">
+						<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-979782">{{ 'help.aadhaar_verification' | translate }}</a>
+					</div>
+					<div id="card-element-979782" class="collapse p-3">
+						<div class="card-block">
+							{{ 'help.aadhaar_verification_description' | translate }}
+						</div>
+					</div>
+				</div>
+				<!-- Buying products area starts here -->
+				<div class="card my-2 shadow-sm">
+					<div class="card-header">
+						<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-111">{{ 'help.buying_products' | translate }}</a>
+					</div>
+					<div id="card-element-111" class="collapse p-3">
+						<div class="card-block">
+							{{ 'help.buying_products_description' | translate }}
+						</div>
+					</div>
+				</div>
+				<!-- Bulk order area starts here -->
+				<div class="card my-2 shadow-sm">
+					<div class="card-header">
+						<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-222">
+							{{ 'help.normal_v_bulk' | translate }}
+						</a>
+					</div>
+					<div id="card-element-222" class="collapse p-3">
+						<div class="card-block">
+							{{ 'help.normal_v_bulk_description' | translate }}
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="card my-2 shadow-sm">
-			<div class="card-header">
-				<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-979782">{{ 'help.aadhaar_verification' | translate }}</a>
-			</div>
-			<div id="card-element-979782" class="collapse p-3">
-				<div class="card-block">
-					{{ 'help.aadhaar_verification_description' | translate }}
-				</div>
-			</div>
-		</div>
-		<div class="card my-2 shadow-sm">
-			<div class="card-header">
-				<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-111">{{ 'help.buying_products' | translate }}</a>
-			</div>
-			<div id="card-element-111" class="collapse p-3">
-				<div class="card-block">
-					{{ 'help.buying_products_description' | translate }}
-				</div>
-			</div>
-		</div>
-		<div class="card my-2 shadow-sm">
-			<div class="card-header">
-				<a class="collapsed card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-222">
-					{{ 'help.normal_v_bulk' | translate }}
-				</a>
-			</div>
-			<div id="card-element-222" class="collapse p-3">
-				<div class="card-block">
-					{{ 'help.normal_v_bulk_description' | translate }}
-				</div>
+			<!-- Right offset to keep content in the centre -->
+			<div class="col-sm-2">
 			</div>
 		</div>
 	</div>
-	<div class="col-sm-2">
-
-	</div>
-</div>
-</div>
 </div>
