--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
@@ -6,19 +6,18 @@
 
 <div class="container-fluid current-orders bg">
   
-  <div class="row current-orders-body" *ngIf=" currentOrders[0].orderId != null">
+  <div class="row current-orders-body">
     <div *ngFor="let order of currentOrders">
-
-      <div class="col-md-4 cards" >
+       <div class="col-md-4 cards" >
            <div class="card shadow" >
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item item-id ">{{ 'customer_current_order.orderid' | translate }}             :   {{order?.orderId}}</li>
-                  <li class="list-group-item item">{{ 'customer_current_order.product_name' | translate }}            :   {{order?.name}} </li>                            
-                  <li class="list-group-item item">{{ 'customer_current_order.quantity' | translate }}                :   {{order?.quantity}}</li>                            
-                  <li class="list-group-item item">{{ 'customer_current_order.price' | translate }}                   :   {{order?.totalAmount}}</li>
-                  <li class="list-group-item item">{{ 'customer_current_order.rating' | translate }}                  :   {{order?.avgRating}}</li>
-                  <li class="list-group-item item">{{ 'customer_current_order.otp' | translate }}                     :   {{order?.otp}} </li>
+                  <li class="list-group-item item-id ">{{ 'customer_current_order.orderid' | translate }}             :   {{order.orderId}}</li>
+                  <li class="list-group-item item">{{ 'customer_current_order.product_name' | translate }}            :   {{order.name}} </li>                            
+                  <li class="list-group-item item">{{ 'customer_current_order.quantity' | translate }}                :   {{order.quantity}}</li>                            
+                  <li class="list-group-item item">{{ 'customer_current_order.price' | translate }}                   :   {{order.totalAmount}}</li>
+                  <li class="list-group-item item">{{ 'customer_current_order.rating' | translate }}                  :   {{order.avgRating}}</li>
+                  <li class="list-group-item item">{{ 'customer_current_order.otp' | translate }}                     :   {{order.otp}} </li>
                 </ul>
               </div>
             </div>
