--- a/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
+++ b/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
@@ -1,14 +1,14 @@
 
-.bg{
+/* .bg{
     padding-left: 130px;
-}
+} */
 
-.cards{
+/* .cards{
     padding-top:30px;
-}
+} */
 .card{
     background-color: #f9f9f9;
-    width : 340px;
+    /* width : 340px; */
     margin : auto;
    
 }
@@ -52,30 +52,6 @@ form{
     width : 70%;
     margin : 0 auto;
 }
-
-h1 {
-    font-weight: normal;
-    padding: 0.5em 0 40px 0;
-    text-align: center;
-    margin: 0;
-    color: #4b5320;
-    font-size: 50px;
-    line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
-    }
-
-/* h1{
-    text-align : center;
-    margin: 15px 0 0.5em 0;
-    padding-top: 10px;
-    color :#d84b6b;
-    font-weight: normal;
-    font-family: 'Roboto', sans-serif;   
-    font-size: 50px;
-    line-height: 42px;
-    text-transform: uppercase;
-    text-shadow: 0 2px white, 0 3px #777;   
-} */
 
 .display-4{
     color : white;
