made changes in add-product-component

--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid current-orders bg">
   
-  <div class="row current-orders-body" *ngIf=" currentOrders[0].orderId != null">
+  <div class="row current-orders-body" >
     <div *ngFor="let order of currentOrders">
 
       <div class="col-md-4 cards" >
