after modifying farmer-my-account

--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -35,4 +35,17 @@
       </div>
     </div>
   </div>
+   {{farmerName}} 
+    {{farmerPincode}}
+    {{farmerAddressLine}}
+    {{farmerCity}}
+    {{farmerDistrict}}
+    {{farmerState}}
+    {{farmerMobileNumber}}
+    {{farmerPhoto}}
+    {{farmerMobile}}
+{{accountName}}
+{{accountNo}}
+{{ifscCode}}
+{{alternateNo}}
 </div>
