changed mt-100 botttom margin to 6 rem

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 .mt-100 {
-  margin-top:100px;
+  margin-top:8rem;
 }
 
 @media screen and (max-width: 800px) {
