--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -2,8 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-10">
       <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control  searchText" type="text" name="q" placeholder="{{ 'products.search' | translate }}" [(ngModel)]="searchInput"
-        />
+        <input class="form-control  searchText" type="text" name="q" placeholder="{{ 'products.search' | translate }}" [(ngModel)]="searchInput"/>
         <button class="btn btn-outline-primary my-2 my-sm-0 ml-1" type="submit" (click)='searchProduct()'>
           <i class="fa fa-search"></i>
         </button>
@@ -36,7 +35,7 @@
       <!-- filtered by price end-->
       <!-- filtered by quantity start-->
       <label class="my-3">
-        <span>{{ 'products.search' | translate }}</span>
+        <span>{{ 'products.filter_by_quantity' | translate }}</span>
       </label>
       <ion-range-slider #sliderElement type="double" min="0" [max]=max_quantity [to]=max_quantity prefix="{{ 'products.quantity' | translate }}:"
         postfix=" Kg" (onFinish)="myOnFinishQuantity($event)">
