--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
@@ -50,7 +50,7 @@
       </div>
       </div>
       <div class = form-comp-button>
-      <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid"> {{ 'customer_add_address.add' | translate }}</button>
+      <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid"> {{ 'customer_add_address.update' | translate }}</button>
       </div>
     </div>
   </form>
