Updated responsiveness of customer account component

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -75,7 +75,7 @@
 </footer> -->
 <!--/.Footer-->
 
-<footer>
+<footer class="mt-5">
     <div class="footer-top">
       <div class="container">
         <div class="row">
