--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
@@ -21,14 +21,12 @@
 }
 
 h1 {
-    font-weight: normal;
+    font-weight: 600;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #28a745;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
 
 .jumbotron{
@@ -50,15 +48,14 @@ form{
 }
 
 h1 {
-    font-weight: normal;
+    font-weight: 600;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #28a745;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
+
 
 /* h1{
     text-align : center;
