--- a/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
+++ b/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
@@ -25,15 +25,14 @@
 }
 
 h1 {
-    font-weight: normal;
+    font-weight: 600;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #28a745;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
+
 
 .jumbotron{
     background-color : #a9c056;
