--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -23,7 +23,7 @@
 <!-- end of header for customer-->
 <div class="container-fluid my-4">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2" style="margin-left: 1rem">
       <!-- filtered by price start-->
 
       <label class="my-3">
@@ -46,7 +46,7 @@
     <!-- end of side bar-->
     <div *ngIf="products[0]; then prod else empty"></div>
     <ng-template #prod>
-      <div class="col-md-10">
+      <div class="col-md-9">
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-lg-4" *ngFor="let item of products | paginate:{itemsPerPage:productsToShowInOnePage,currentPage:p}">
