--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-1 btn">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit">
           <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#profile" role="tab" aria-controls="add">profile</a>
+            <a class="nav-link active" data-toggle="tab" href="#profile" role="tab" aria-controls="add">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#add" role="tab" aria-controls="add">{{ 'my_account.add_address' | translate }}</a>
@@ -34,7 +34,7 @@
                   </div>
 
                   <!-- Avatar -->
-                  <div class="avatar mx-auto white">
+                  <div class="avatar mx-auto white py-3">
                     <img src="./../../../../assets/images/user_img.jpeg" class="rounded-circle">
                   </div>
 
