--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -1,4 +1,4 @@
-<div class="home mt-100">
+<div class="home">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-1 btn">
@@ -22,7 +22,7 @@
       </div>
       <div class="col-md-10 marginComponent" style="margin-top:-7rem">
         <div class="tab-content">
-          <div class="tab-pane active" id="profile" role="tabpanel">
+          <div class="tab-pane active mt-100" id="profile" role="tabpanel">
             <div class="container mt-4">
               <div class="">
 
