--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -34,7 +34,7 @@
                   </div>
 
                   <!-- Avatar -->
-                  <div class="avatar mx-auto white py-3">
+                  <div class="avatar mx-auto white pt-2">
                     <img src="./../../../../assets/images/user_img.jpeg" class="rounded-circle">
                   </div>
 
@@ -44,21 +44,38 @@
                     <hr>
                     <!-- Quotation -->
                     <p *ngIf="farmerInfo.currentAddress">
-                      <i class="fa fa-quote-left"></i> Current Address: {{farmerInfo.currentAddress.addressLine}}, {{farmerInfo.currentAddress.city}},
-                      distt. {{farmerInfo.currentAddress.district}}
-                      <br> {{farmerInfo.currentAddress.state}}, {{farmerInfo.currentAddress.pincode}}</p>
-                    <p>Alternate
-                      <i class="fa fa-phone" aria-hidden="true"></i>{{farmerInfo.mobileNo}}</p>
-                    <p>Current
-                      <i class="fa fa-phone" aria-hidden="true"></i>{{farmerInfo.alternateNo}}</p>
+                      <span class="font-weight-bold">Current Address: </span>
+                      {{farmerInfo.currentAddress.addressLine}}, {{farmerInfo.currentAddress.city}}, 
+                      distt. {{farmerInfo.currentAddress.district}} {{farmerInfo.currentAddress.state}}, {{farmerInfo.currentAddress.pincode}}
+                    </p>
+                    <p>
+                      <span class="font-weight-bold">Alternate</span>
+                      <i class="fa fa-phone" aria-hidden="true"></i>{{farmerInfo.mobileNo}}
+                    </p>
+                    <p>
+                      <span class="font-weight-bold">
+                        Current
+                      </span>
+                      <i class="fa fa-phone" aria-hidden="true"></i>{{farmerInfo.alternateNo}}
+                    </p>
                     <p *ngIf="farmerInfo.cities"> Places where i can deliver</p>
                     <p>
                       <i *ngFor="let city of farmerInfo.cities" lass="fa fa-map-marker" aria-hidden="true">{{city}}</i>
                     </p>
                     <p>
-                      <i class="fa fa-quote-left"></i> Aadhaar Address: {{farmerInfo.aadhaarData.permanentAddress.addressLine}}, {{farmerInfo.aadhaarData.permanentAddress.city}}, distt.
-                      {{farmerInfo.aadhaarData.permanentAddress.district}}</p>
-                    <p>{{farmerInfo.aadhaarData.permanentAddress.state}}, {{farmerInfo.aadhaarData.permanentAddress.pincode}}</p>
+                      <span class="font-weight-bold">Aadhaar Address: </span>
+                      {{farmerInfo.aadhaarData.permanentAddress.addressLine}}, {{farmerInfo.aadhaarData.permanentAddress.city}}, distt. {{farmerInfo.aadhaarData.permanentAddress.district}},
+                      {{farmerInfo.aadhaarData.permanentAddress.state}}, {{farmerInfo.aadhaarData.permanentAddress.pincode}}
+                    </p>
+                    <p *ngIf="farmerInfo.bankDetails">
+                      <span class="font-weight-bold">Bank Details</span>
+                      <br>
+                      <span>Account Owner: {{farmerInfo.bankDetails.accountName}}</span>
+                      <br>
+                      <span>Account Name: {{farmerInfo.bankDetails.accountNo}}</span>
+                      <br>
+                      <span>Account IFSC:{{farmerInfo.bankDetails.ifscCode}}</span>
+                    </p>
                   </div>
                 </div>
               </div>
