--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -75,7 +75,7 @@
 </footer> -->
 <!--/.Footer-->
 
-<footer class="mt-5">
+<footer>
   <!-- Top part of Footer starts here -->
   <div class="footer-top">
     <div class="container">
