--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
@@ -1,5 +1,5 @@
 <h1>{{ 'customer_address_book.address_details' | translate }}</h1>
-<div class="container" style="height: 100%;">
+<div class="container">
   <div class="row">
     <div class="col-4">
       <div class="card add_card" id="card">
@@ -13,6 +13,7 @@
       <div class="col-4">
         <div class="card" id="card">
           <div class="card-body">
+
             <div class="card-text">
               <ul>
                 <li><b>ADDRESS LINE :</b>{{address.addressLine}}</li>
