Improved responsivity of farmer my account

--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -1,7 +1,7 @@
 <div class="home" style="margin-bottom: 3rem">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-1 btn">
+      <div class="col-12 col-xl-1 btn">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit">
           <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#profile" role="tab" aria-controls="add">Profile</a>
@@ -20,7 +20,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-10 marginComponent" style="margin-top:-1rem">
+      <div class="col-12 col-xl-10 marginComponent" style="margin-top:-1rem">
         <div class="tab-content">
           <div class="tab-pane active mt-90" id="profile" role="tabpanel">
             <div class="container mt-4">
