--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
@@ -1,7 +1,3 @@
-.bg{
-    padding-left: 333px;
-}
-
 h1 {
     font-weight: 600;
     padding: 0.5em 0 40px 0;
@@ -11,118 +7,21 @@ h1 {
     line-height: 42px;
     }
 
-.card{
-    background-color: #f9f9f9;
-    width : 600px;
-    margin : auto;
-}
-.item{
-    background-color: #f9f9f9;
-    padding-left : 5px;
-    font-size : 18px;
-}
-
-.title{
-    color : white;
-    margin-top : -30px;
-    font-style: roboto;
-}
-
-.jumbotron{
-    background-color : #a9c056;
-    margin-top : -15px;
-    height : 30px;
-    
-}
-
-.item-id{
-    background-color: #a9c056;
-    padding-left : 5px;
-    font-size : 18px;
-}
-
 form{
     width : 70%;
     margin : 0 auto;
 }
 
-.display-4{
-    color : white;
-    margin-top : -30px;
-    font-style: roboto;
-}
-
-.form-group{
-    font-style: roboto;
-    width : 85%;
-    margin : auto;
-}
-
-.form-comp-top{
-    margin-top: 40px;
-}
-
-.form-comp{
-    margin-top: 25px;
-}
-
-.alert {
-    background: #ffaaaa;
-    padding: 0px;
-    font-size: .9em;
-    margin-bottom: 0px;
-    display: inline-block;
-    animation: 2s alertAnim forwards;
-}
-
-@keyframes alertAnim {
-    from {
-        opacity:0;
-        transform: translateY(0);
-    }
-    to {
-        opacity:1;
-        transform: translateY(0);
-    }
-}
-
-.name{
-    padding-left : 5px;
-    font-size : 18px;
-}
-
-.form-comp-button{
-    margin-top: 10px;
-    text-align: center;
-    border-radius: 12px;
-}
-button{
-    background-color : #a9c056 !important;
-    border : none;
-    margin-top: 35px;
-    margin-bottom: 20px;
-}
-
-button:hover {
-    background-color: #c1ed23 !important;
-    
-}
-
-button:focus{
-    border-color : #f9f9f9 !important;
-}
-
-.card{
-    background-color: #f9f9f9;
-    width : 600px;
-    margin : auto;
-}
-
 #card{
-    width: 18rem;
-    height: 13rem;
-    margin-top: 2rem;
-    margin-left: 2rem;
+    height: 145px;
+    width: 220px;
+    margin-top: 1rem;
+    margin-left: 0;
+    background-color: white;
+    border: #C7C7C7 solid 1px;
+    box-shadow: 0 2px 1px 0 rgba(0,0,0,.16);
+    box-sizing: border-box;
+    font-size: 13px;
 }
 
 .add_card{
@@ -134,8 +33,8 @@ button:focus{
 }
 
 #address_icon{
-    width: 8rem;
-    height: 8rem;
+    width: 4rem;
+    height:4rem;
 }
 .container{
     padding-bottom: 3rem;
