--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
@@ -1,6 +1,6 @@
 <h1>{{ 'customer_address_book.address_details' | translate }}</h1>
-<div class="container">
-  <div class="row">
+<div class="container-fluid">
+  <div class="row" style="margin: auto">
     <div class="col-4" style="max-width: 250px;;">
       <div class="card add_card" id="card">
         <div class="card-body">
